@@ -84,11 +84,16 @@ sub render_single_value
 	if( $res eq "month" ) { $l = 7; }
 	if( $res eq "year" ) { $l = 4; }
 		
+	if( defined $value )
+	{
+		$value = substr( $value, 0, $l );
+	}
+
 	if( $self->{render_style} eq "short" )
 	{
-		return EPrints::Time::render_short_date( $session, substr( $value,0,$l ) );
+		return EPrints::Time::render_short_date( $session, $value );
 	}
-	return EPrints::Time::render_date( $session, substr( $value,0,$l ) );
+	return EPrints::Time::render_date( $session, $value );
 }
 	
 
