@@ -6548,4 +6548,5 @@ PACKAGE: 2.2.99.2
  * Removed redundant and broken fileinfo setting in eprint_fields_automatic
  * Objects read from the database will no longer always be committed, fixing
     #3156
+ * Don't substr an undefined value in Time fields, fixing #3111
 
